--- a/css/style.css
+++ b/css/style.css
@@ -5,18 +5,28 @@
     margin: 0 auto;
     margin-top: 50px;
     padding: 30px 30px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    box-shadow: 0px -1px 27px 10px red;
+    border-radius: 20px;
+    transition: .5s;
+}
+.calculator:hover{
+    box-shadow: 0px -1px 27px 10px greenyellow;
 }
 .scren{
     height: 100px;
     width: 100%;
     background: rgba(102, 99, 99, 0.6);
+   overflow: hidden;
 }
 body{
-    background: gray;
+    background: darkslategray;
     color: aliceblue;
 }
 .button-body{
-    background-color: green;
     height: 275px;
     width: 100%;
     margin-top: 15px;
@@ -26,4 +36,17 @@ body{
     margin-top: 15px;
     width: 70px;
     height: 50px;
+}
+#charecter{
+    font-size: 65px;
+    text-align:right;
+    color: rgb(209, 209, 209);
+    font-weight: 500;
+}
+.copyright{
+    position:absolute;
+    top: 0;
+    font-size: 12px;
+    line-height: 2.4;
+    color: rgb(177, 177, 177);
 }
